force-app/main/default/objects/Guardians__c/Guardians__c.object-meta.xml
<CustomObject>
    <label>Guardian</label>
    <nameField>
        <label>Guardians Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guardians</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>