force-app/main/default/objects/Guardians__c/fields/FinancialStatus__c.field-meta.xml
<CustomField>
    <fullName>FinancialStatus__c</fullName>
    <label>Financial Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Middle Class</fullName>
            </value>
            <value>
                <fullName>Upper Class</fullName>
            </value>
            <value>
                <fullName>Rich</fullName>
            </value>
            <value>
                <fullName>very Rich</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>