force-app/main/default/objects/Guardians__c/fields/Gage__c.field-meta.xml
<CustomField>
    <fullName>Gage__c</fullName>
    <label>Gage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>